# wav2vec2.cpp

./: .clang-format  .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md  build-wav2vec2-xcframework.sh
.github/workflows/: build.yml  eval.yml
examples/: CMakeLists.txt  common-ggml.cpp
examples/wav2vec2/: CMakeLists.txt  quantize-wav2vec2.cpp  wav2vec2-cli.cpp
include/: wav2vec2.h
models/: convert-wav2vec2-to-ggml.py  convert-wav2vec2bert-to-ggml.py
samples/: README.md
scripts/: download_samples.sh  eval_vs_pytorch.py
src/: CMakeLists.txt  wav2vec2-arch.h  wav2vec2.cpp  wav2vec2bert-arch.h  wav2vec2bert.cpp
tests/: test_inference.py
